<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_16dp"
        android:layout_marginVertical="@dimen/space_4dp"
        android:elevation="@dimen/space_4dp"
        app:cardCornerRadius="@dimen/space_4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/itemImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/itemNameTextView"
                style="@style/BaseTheme.Header.14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_16dp"
                android:text="@string/item_name_title"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/itemImageView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="TenderLoin (200g)" />

            <TextView
                android:id="@+id/itemBoughtDateTextView"
                style="@style/BaseTheme.Normal.10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16dp"
                android:layout_marginVertical="@dimen/space_4dp"
                android:text="@string/item_bought_date"
                app:layout_constraintStart_toEndOf="@id/itemImageView"
                app:layout_constraintTop_toBottomOf="@id/itemNameTextView"
                tools:text="Bought Date: 29/09/2022" />

            <TextView
                android:id="@+id/itemExpiredDateTextView"
                style="@style/BaseTheme.Normal.10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16dp"
                android:layout_marginVertical="@dimen/space_4dp"
                android:text="@string/item_expired_date"
                app:layout_constraintStart_toEndOf="@id/itemImageView"
                app:layout_constraintTop_toBottomOf="@id/itemBoughtDateTextView"
                tools:text="Expired Date: 29/09/2022" />

            <TextView
                android:id="@+id/itemPriceTextView"
                style="@style/BaseTheme.Normal.10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_16dp"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/itemImageView"
                tools:text="$100" />

            <TextView
                android:id="@+id/itemQuantityTextView"
                style="@style/BaseTheme.Normal.10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_16dp"
                android:text="@string/item_quantity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Left: 20" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>