<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".ui.home.HomeActivity">

    <ImageView
        android:id="@+id/eatsieLogoImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/eatsie_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/home_login_title"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eatsieLogoImageView" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/home_login_subtitle"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <EditText
        android:id="@+id/usernameInput"
        style="@style/BaseTheme.Normal"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_text"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleTextView" />

    <EditText
        android:id="@+id/passwordInput"
        style="@style/BaseTheme.Normal"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_text"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:layout_margin="25dp"
        android:background="@drawable/rounded_button"
        android:text="Login"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="@dimen/space_4dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <Button
        android:id="@+id/forgotPassButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/hypertext"
        android:fontFamily="sans-serif"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadingProgressBar" />

    <View
        android:id="@+id/line"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:layout_margin="5dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassButton" />

    <Button
        android:id="@+id/newAccButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/hypertext"
        android:fontFamily="sans-serif"
        android:text="@string/not_on_board_yet_join_now"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />


</androidx.constraintlayout.widget.ConstraintLayout>